--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -27,9 +27,11 @@
               </button>
             </li>
 
-            
-            
-        
+            <li>
+              <button (click)="navigate('/ingles/relax')" class="w-full text-left px-4 py-2 hover:bg-gray-100">
+                Relax
+              </button>
+            </li>
             </ul>
           </li>
           
