--- a/src/app/app/pages/listening/listening.html
+++ b/src/app/app/pages/listening/listening.html
@@ -6,6 +6,15 @@
 
 <div *ngIf="mostrarFiltros" class="p-4">
   <div class="p-4 grid gap-4 md:grid-cols-2 lg:grid-cols-4">
+
+    <!-- Selección de hoja -->
+<div class="p-4">
+  <label class="block mb-2 font-semibold">Selecciona hoja del Excel</label>
+  <select [(ngModel)]="hojaSeleccionada" (change)="onSelectHojaChange()" class="border p-2 rounded w-full">
+    <option *ngFor="let hoja of hojasDisponibles" [value]="hoja">{{ hoja }}</option>
+  </select>
+</div>
+
     <!-- Grupo -->
     <div>
       <label class="block mb-1 font-semibold">Grupo</label>
