--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,7 +2,12 @@
     <div class="container mx-auto flex justify-between items-center">
       <a class="text-xl font-bold" >IdiomasApp</a>
       <ul class="flex gap-6 items-center relative">
-    
+    <!-- ...otros botones del dropdown -->
+
+  <button (click)="refreshData('lucia')" class="w-full text-left px-4 py-2 hover:bg-gray-100">
+    🔄 Refrescar datos
+  </button>
+
   
         <!-- Dropdown: Inglés -->
         <li class="relative" data-dropdown>
