--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -46,6 +46,13 @@
               Relax
             </a>
           </li>
+
+
+          <li>
+            <a routerLink="/audio-uploader" (click)="navigate('/audio-uploader')" class="block px-4 py-3 hover:bg-gray-100 transition duration-150 ease-in-out text-lg font-medium">
+              Subir Audio
+            </a>
+          </li>
         </ul>
       </li>
 
