--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -53,6 +53,13 @@
               Subir Audio
             </a>
           </li>
+
+
+          <li>
+            <a routerLink="/autoevaluacion" (click)="navigate('/autoevaluacion')" class="block px-4 py-3 hover:bg-gray-100 transition duration-150 ease-in-out text-lg font-medium">
+              Autoevaluación
+            </a>
+          </li>
         </ul>
       </li>
 
