--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -63,6 +63,11 @@
         </ul>
       </li>
 
+      <li>
+        <button (click)="logout()" class="flex items-center px-4 py-2 rounded-lg hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-blue-900 transition duration-200 ease-in-out">
+          Logout
+        </button>
+      </li>
       </ul>
   </div>
 </nav>
