--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -60,6 +60,20 @@
               Autoevaluación
             </a>
           </li>
+
+
+            <li>
+            <a routerLink="/assessment-setup" (click)="navigate('/assessment-setup')" class="block px-4 py-3 hover:bg-gray-100 transition duration-150 ease-in-out text-lg font-medium">
+              Assessment Setup
+            </a>
+          </li>
+
+
+            <li>
+            <a routerLink="/deep-study-setup" (click)="navigate('/deep-study-setup')" class="block px-4 py-3 hover:bg-gray-100 transition duration-150 ease-in-out text-lg font-medium">
+              Deep Study Setup
+            </a>
+          </li>
         </ul>
       </li>
 
