--- a/src/app/pages/deep-study-view/deep-study-view.html
+++ b/src/app/pages/deep-study-view/deep-study-view.html
@@ -1,8 +1,8 @@
 <div class="container mx-auto p-6 max-w-4xl">
   <div *ngIf="currentPhrase" class="bg-white p-8 rounded-2xl shadow-2xl">
     <div class="text-center mb-6">
-      <h2 class="text-4xl font-bold text-gray-800 mb-2">{{ currentPhrase.originalText }}</h2>
-      <p class="text-2xl text-gray-500">{{ currentPhrase.translations[0].translatedText }}</p>
+      <h2 class="text-4xl font-bold text-gray-800 mb-2">{{ currentPhrase.translations[0].translatedText  }}</h2>
+      <p class="text-2xl text-gray-500">{{  currentPhrase.originalText}}</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
