--- a/src/app/pages/audio-manager/audio-manager.html
+++ b/src/app/pages/audio-manager/audio-manager.html
@@ -13,7 +13,7 @@
     <div>
       <label for="playlist" class="block text-sm font-medium text-gray-700">Filtrar por Playlist:</label>
       <select id="playlist" [(ngModel)]="selectedPlaylistId" (change)="loadPhrases()" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-        <option value="">Todas las frases</option>
+        <option value="todas">Todas las frases</option>
         <option *ngFor="let playlist of playlists" [value]="playlist._id">{{ playlist.name }}</option>
       </select>
     </div>
